Generating Invoice per debtor.