@@ -1,1 +1,2 @@
+set MAVEN_OPTS=--sun-misc-unsafe-memory-access=allow
 mvn clean install -DskipTests
